@@ -161,5 +161,7 @@
 		reconnect, also SQUIT deletes from the db.
 	- Do an snote when someone removes an akill.  Also fix a memory leak when
 		someone removes an akill. (#48)
+	- Add CERT command for authentication with client certificate fingerprints.
+	- Make use of the +P umode in oftc 1.6.
 	- Don't rb_raise in places we can't recover from
 	- Don't use ServiceBase it breaks rubys gc bad. (#19)
